--- a/trunk/app/views/topics/show.html.erb
+++ b/trunk/app/views/topics/show.html.erb
@@ -52,7 +52,7 @@ App.data = {
   									<div id="ld_llfWRv_13710">
   										<div id="ld_Sb8jgF_15697">
   											<div class="profile_photo" id="__w2_hvmdzzb_photo">
-  												<a href="/Analysis-mathematical" routing="q://topic/(46339)" id="__w2_f78iPLQ_link"><img class="profile_photo_img" src="<%= cover_url(@topic) %>" width="100" alt="Analysis (mathematical)" height="100"/></a>
+  												<img class="profile_photo_img" src="<%= cover_url(@topic) %>" width="100" alt="Analysis (mathematical)" height="100"/>
   												<div class="edit_profile_photo hidden" id="__w2_hvmdzzb_edit">
   													<a href="#" id="__w2_rxgk7xr_open_edit_photo">Edit Photo</a>
   												</div>
@@ -64,20 +64,10 @@ App.data = {
   									<div id="ld_llfWRv_13711">
   										<div class="simple_tabs">
   											<ul class="list_contents" id="__w2_WIUnu5g_tabs">
-  												<li class="tab linked_list_item"><a class="link" href="/Analysis-mathematical/organize" id="__w2_WIUnu5g_organize">我要提问</a></li>
+  												<li class="tab linked_list_item"><a class="link" href="/Analysis-mathematical/organize" id="__w2_WIUnu5g_organize">在此课程提问</a></li>
   												<li class="tab linked_list_item first"><a class="link" href="/Analysis-mathematical/faq" id="__w2_WIUnu5g_faq">上传课件</a></li>
-  												<li class="tab linked_list_item"><a class="link" href="/Analysis-mathematical/mentions" id="__w2_WIUnu5g_mentions">1 @提到该课程</a></li>
-  												<li class="tab linked_list_item"><a class="link" href="/Analysis-mathematical/log" id="__w2_WIUnu5g_log">变更历史</a></li>
   											</ul>
   										</div>
-  									</div>
-  								</div>
-  								<div id="ld_llfWRv_13712">
-  									<div class="row section section_border">
-  										<ul class="light">
-  											<li class="row p0_5"><a href="#questions">此课程全部课件</a></li>
-  											<li class="row p0_5"><a href="#feed">课程动态</a></li>
-  										</ul>
   									</div>
   								</div>
   							</div>
@@ -1886,131 +1876,6 @@ App.data = {
   										</div>
   									</div>
   									<div class="side_col w2 p1">
-  										<div id="ld_llfWRv_13722">
-  											<div class="section share_question section_top">
-  												<h3>分享课程<span class="bullet"> &bull; </span><strong class="light"><span id="ld_QFxMa5_12839"><a href="#" id="__w2_wvsLrh1_link">邀请他人来参与</a></span></strong></h3>
-  												<div class="row share_icons_row">
-  													<a class="has_icon twitter" href="#" id="__w2_WmFYm8x_share">Twitter</a><a class="has_icon facebook" href="#" id="__w2_MECX42e_share">Facebook</a><a class="has_icon quora" href="#" id="__w2_eCRzr0w_share">Quora</a>
-  												</div>
-  											</div>
-  										</div>
-  										<div id="ld_llfWRv_13723">
-  											<div class="row section ">
-  												<h3>课程专家</h3>
-  												<div id="ld_zeewpY_18970">
-  													<div class="usercard_row row usercard_answerer" id="__w2_wRBIBy8_answerer">
-  														<span id="ld_zeewpY_18976"></span>
-  														<div id="ld_zeewpY_18977">
-  															<div class="usercard">
-  																<div class="pic">
-  																	<a href="/Edwin-Chen-1" routing="q://user/(888421)" id="__w2_gyutJEd_link"><img class=" profile_photo_img" src="http://qph.cf.quoracdn.net/main-thumb-888421-25-oujENnZbgEsq6EOcBsRZKbIQlSClrEs0.jpeg" width="25" alt="Edwin Chen" height="25"/></a>
-  																</div>
-  																<div class="usercard_info">
-  																	<span class="usercard_name"><a class="user" href="/Edwin-Chen-1" routing="q://user/(888421)" id="__w2_zy7bVtE_link">Edwin Chen</a></span><br/><span class="light num_answers"><span id="ld_zeewpY_18986"><a style="white-space:nowrap;" href="/Edwin-Chen-1/answers/Analysis-mathematical">1 Answer</a></span></span><span id="ld_zeewpY_18987">
-  																	<div class="hover_menu hidden" style="display: none" id="__w2_SKnWbCp_menu">
-  																		<div class="hover_menu_nub">
-  																		</div>
-  																		<div class="hover_menu_contents" id="__w2_SKnWbCp_menu_contents">
-  																		</div>
-  																	</div>
-  																	<span id="__w2_SKnWbCp_link"></span></span>
-  																</div>
-  															</div>
-  														</div>
-  													</div>
-  												</div>
-  												<div id="ld_zeewpY_18971">
-  													<div class="usercard_row row usercard_answerer" id="__w2_Jqd02jq_answerer">
-  														<span id="ld_zeewpY_18978"></span>
-  														<div id="ld_zeewpY_18979">
-  															<div class="usercard">
-  																<div class="pic">
-  																	<a href="/Sarah-Constantin" routing="q://user/(3351591)" id="__w2_yLtIBnF_link"><img class=" profile_photo_img" src="http://qph.cf.quoracdn.net/main-thumb-3351591-25-iAiG3z3Db3Yx8YNNGWuP43Ufo3FDakd8.jpeg" width="25" alt="Sarah Constantin" height="25"/></a>
-  																</div>
-  																<div class="usercard_info">
-  																	<span class="usercard_name"><a class="user" href="/Sarah-Constantin" routing="q://user/(3351591)" id="__w2_omKJmZX_link">Sarah Constantin</a></span><br/><span class="light num_answers"><span id="ld_zeewpY_18988"><a style="white-space:nowrap;" href="/Sarah-Constantin/answers/Analysis-mathematical">2 Answers</a></span></span><span id="ld_zeewpY_18989">
-  																	<div class="hover_menu hidden" style="display: none" id="__w2_iqfFG8I_menu">
-  																		<div class="hover_menu_nub">
-  																		</div>
-  																		<div class="hover_menu_contents" id="__w2_iqfFG8I_menu_contents">
-  																		</div>
-  																	</div>
-  																	<span id="__w2_iqfFG8I_link"></span></span>
-  																</div>
-  															</div>
-  														</div>
-  													</div>
-  												</div>
-  												<div id="ld_zeewpY_18972">
-  													<div class="usercard_row row usercard_answerer" id="__w2_WPinoq0_answerer">
-  														<span id="ld_zeewpY_18980"></span>
-  														<div id="ld_zeewpY_18981">
-  															<div class="usercard">
-  																<div class="pic">
-  																	<a href="/Tarun-Chitra" routing="q://user/(604935)" id="__w2_Hk6x6m5_link"><img class=" profile_photo_img" src="http://qph.cf.quoracdn.net/main-thumb-604935-25-0Zkw4hphz6UM5wQ4LkGezm26TfuKWJvJ.jpeg" width="25" alt="Tarun Chitra" height="25"/></a>
-  																</div>
-  																<div class="usercard_info">
-  																	<span class="usercard_name"><a class="user" href="/Tarun-Chitra" routing="q://user/(604935)" id="__w2_wrFlwYh_link">Tarun Chitra</a></span><br/><span class="light num_answers"><span id="ld_zeewpY_18990"><a style="white-space:nowrap;" href="/Tarun-Chitra/answers/Analysis-mathematical">4 Answers</a></span></span><span id="ld_zeewpY_18991">
-  																	<div class="hover_menu hidden" style="display: none" id="__w2_kr5as5F_menu">
-  																		<div class="hover_menu_nub">
-  																		</div>
-  																		<div class="hover_menu_contents" id="__w2_kr5as5F_menu_contents">
-  																		</div>
-  																	</div>
-  																	<span id="__w2_kr5as5F_link"></span></span>
-  																</div>
-  															</div>
-  														</div>
-  													</div>
-  												</div>
-  												<div id="ld_zeewpY_18973">
-  													<div class="usercard_row row usercard_answerer" id="__w2_c250NsS_answerer">
-  														<span id="ld_zeewpY_18982"></span>
-  														<div id="ld_zeewpY_18983">
-  															<div class="usercard">
-  																<div class="pic">
-  																	<a href="/Harris-B-Daniels" routing="q://user/(933066)" id="__w2_gCzcleD_link"><img class=" profile_photo_img" src="http://qph.cf.quoracdn.net/main-thumb-933066-25-L1XxhCWRA4Uk7iDQtXpu9STjSTg6vLMR.jpeg" width="25" alt="Harris B. Daniels" height="25"/></a>
-  																</div>
-  																<div class="usercard_info">
-  																	<span class="usercard_name"><a class="user" href="/Harris-B-Daniels" routing="q://user/(933066)" id="__w2_snoa93d_link">Harris B. Daniels</a></span><br/><span class="light num_answers"><span id="ld_zeewpY_18992"><a style="white-space:nowrap;" href="/Harris-B-Daniels/answers/Analysis-mathematical">1 Answer</a></span></span><span id="ld_zeewpY_18993">
-  																	<div class="hover_menu hidden" style="display: none" id="__w2_X0zjDfx_menu">
-  																		<div class="hover_menu_nub">
-  																		</div>
-  																		<div class="hover_menu_contents" id="__w2_X0zjDfx_menu_contents">
-  																		</div>
-  																	</div>
-  																	<span id="__w2_X0zjDfx_link"><span class="rep">Passed my qualifying exams in Measure Theory and Complex Analysis.</span></span></span>
-  																</div>
-  															</div>
-  														</div>
-  													</div>
-  												</div>
-  												<div id="ld_zeewpY_18974">
-  													<div class="usercard_row row usercard_answerer" id="__w2_EDVZSHh_answerer">
-  														<span id="ld_zeewpY_18984"></span>
-  														<div id="ld_zeewpY_18985">
-  															<div class="usercard">
-  																<div class="pic">
-  																	<a href="/Alan-Guo-1" routing="q://user/(1920050)" id="__w2_QcHgYT3_link"><img class=" profile_photo_img" src="http://qph.cf.quoracdn.net/main-thumb-1920050-25-hwEXzCnORGt2JiTtSQWnFeW2vWe45AS7.jpeg" width="25" alt="Alan Guo" height="25"/></a>
-  																</div>
-  																<div class="usercard_info">
-  																	<span class="usercard_name"><a class="user" href="/Alan-Guo-1" routing="q://user/(1920050)" id="__w2_mIh7uAh_link">Alan Guo</a></span><br/><span class="light num_answers"><span id="ld_zeewpY_18994"><a style="white-space:nowrap;" href="/Alan-Guo-1/answers/Analysis-mathematical">1 Answer</a></span></span><span id="ld_zeewpY_18995">
-  																	<div class="hover_menu hidden" style="display: none" id="__w2_t9Eqg3U_menu">
-  																		<div class="hover_menu_nub">
-  																		</div>
-  																		<div class="hover_menu_contents" id="__w2_t9Eqg3U_menu_contents">
-  																		</div>
-  																	</div>
-  																	<span id="__w2_t9Eqg3U_link"></span></span>
-  																</div>
-  															</div>
-  														</div>
-  													</div>
-  												</div>
-  												<div id="ld_zeewpY_18975">
-  												</div>
-  											</div>
-  										</div>
   										<div class="row">
   											<div id="ld_llfWRv_13724">
   												<h3 class="section_header"><span id="ld_Tyv4uK_12726">有 <a href="/Analysis-mathematical/followers"><strong><%= @topic.followed_count %></strong></a> 人关注此课程</span></h3>
