--- a/trunk/app/assets/stylesheets/main.css.scss.erb
+++ b/trunk/app/assets/stylesheets/main.css.scss.erb
@@ -1,4 +1,5 @@
-﻿#mainContent {
+﻿.__qa{
+#mainContent {
 	margin:20px 30px;
 }
 
@@ -400,4 +401,5 @@ article.reply:last-child {
 }
 .cmtpager li.current a {
 	color:#447208;
+}
 }
