--- a/trunk/app/assets/stylesheets/user.css.scss.erb
+++ b/trunk/app/assets/stylesheets/user.css.scss.erb
@@ -1,4 +1,5 @@
-﻿.userHeader {
+﻿.__qa{
+.userHeader {
 	font-size:12px;
 }
 .userHeader figure {
@@ -161,4 +162,5 @@
 #new_ask_title_ta {
 	height:14px;
 	padding:6px 5px;
+}
 }
