--- a/trunk/app/views/welcome/about.html.erb
+++ b/trunk/app/views/welcome/about.html.erb
@@ -9,6 +9,7 @@
 			<li><a  href="#liber"><em>工程师</em> 刘理博</a></li>
 			<li><a  href="#sounder"><em>工程师</em> 刘晟源</a></li>
 			<li><a  href="#zongzhen"><em>工程师</em> 刘总真</a></li>
+			<li><a  href="#xiaobin"><em>设计师</em> 吴晓斌</a></li>
 			<li><a  href="#luda"><em>产品经理</em> 卢达</a></li>
 			<li><a  href="#yafei"><em>运营</em> 邱亚飞</a></li>
 		</ul>
