--- a/trunk/app/views/coursewares/latest.html.erb
+++ b/trunk/app/views/coursewares/latest.html.erb
@@ -1,36 +1,10 @@
-
+<% content_for :body_style do %>background: none repeat scroll 0 0 #F0EEEE<% end %>
+  <%= render file:'/application/headers/_zm_header' %>
 
 <div class="__zm">
   <div id="pagewrap">
 
 
-    <div id="header" style="position:static">
-
-        <div class="headerContainer cf" id="zm_header">
-
-
-        <div class="navigator yahe cf">
-        <ul>
-          <li><a href="/">我的首页</a></li>
-<li class="dot"></li>
-          <li class="current"><a href="/coursewares">最新上传</a></li>
-<li class="dot"></li>
-          <li><a href="/">正在发生</a></li>
-<li class="dot"></li>
-          <li><a href="/">风云榜</a></li>
-<li class="dot"></li>
-          <li><a href="/">悬而未决的问题</a></li>
-        </ul>
-        </div>
-        </div>
-        <% content_for :butt2 do %>
-        // 用于添加新资源
-        im("#addBs").die().live("click", function () {
-            openAddDialog(this);
-        });
-        im.zm.fnDropmenu($('#header li'), 'navhover'); //导航菜单实现
-        <% end %>
-    </div>
 
 
 
