--- a/trunk/app/views/maps/index.html.erb
+++ b/trunk/app/views/maps/index.html.erb
@@ -15,7 +15,7 @@
 -->
 
 
-<div class="zmnav-bank modshadow cf">
+<div class="zmnav-bank modshadow cf" style="">
 <div class="guide floatright">
 <a href="/saving/about" class="png">新手引导</a>
 </div>
@@ -80,7 +80,7 @@ $("#user_guide").show();
 <% end %>
 </script>
  
-<div id="content" class="cf" style="box-shadow:none;background:none;overflow:visible !important;margin-top:18px">
+<div id="content" class="cf" style="box-shadow:none;background:none;overflow:visible !important;">
 <div id="maincolumn">
 <!--兑换礼品begins-->
 <div class="exchange-gift modshadow">
