--- a/trunk/app/views/topics/hot.html.erb
+++ b/trunk/app/views/topics/hot.html.erb
@@ -8,7 +8,7 @@
 <div id="wrapper">
 <div id="content" class="cf" style="box-shadow:none;background:none;overflow:visible !important;margin-top:18px">
 <div class="ranking" id="jquery-certufyShopCu">
-<h2 class="yahe"><span class="rankico"></span>店铺排行榜</h2>
+<h2 class="yahe"><span class="rankico"></span>领域排行榜</h2>
 <ul class="userlist cf">
 
 
@@ -365,7 +365,7 @@ miu..
 </div>
 <!---------------------------------------------------------------->
 <div class="shop-item cf" id="jquery-certufyShop">
-<h2 class="yahe">所有店铺</h2>
+<h2 class="yahe">所有领域</h2>
 <!------>
 
 
