redis-search to 8 and go to vendor

--- a/trunk/app/assets/stylesheets/ktv/__zm.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/__zm.css.scss.erb
@@ -437,7 +437,7 @@
       height: 49px;
       border-bottom: 1px solid #d3d3d3\9;
       background: rgba(255,255,255,0.8);
-      background: url(/w_alpha80.png) repeat;
+      background: url(http://<%=Setting.ktv_domain%>/w_alpha80.png) repeat;
       _background: #fff;
       box-shadow: 0 1px 3px rgba(36,36,36,0.3);
       position: fixed;
@@ -9480,7 +9480,7 @@
       right: 0;
       top: 0;
       bottom: 0;
-      background: url(/w_alpha80.png) repeat;
+      background: url(http://<%=Setting.ktv_domain%>/w_alpha80.png) repeat;
       overflow-y: auto;
       overflow-x: hidden;
       z-index: 1001
