--- a/trunk/app/views/layouts/application.html.erb
+++ b/trunk/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
   <![endif]-->
   <%= stylesheet_link_tag "application" %>
   <!--[if IE 8 ]>
-    <link href="<%= asset_path('css_ie8.css')%>" media="all" rel="stylesheet" type="text/css" />
+    <link href="/css_ie8.css" media="all" rel="stylesheet" type="text/css" />
   <![endif]-->
   <!--[if lt IE 8 ]>
     <link href="<%= asset_path('css_ie.css')%>" media="all" rel="stylesheet" type="text/css" />
