--- a/trunk/app/assets/stylesheets/css_ie8.css
+++ b/trunk/app/assets/stylesheets/css_ie8.css
@@ -5,7 +5,7 @@
     margin-top:20px;
 }
 #file_uploader {
-    filter:alpha(opacity: 0);
+    filter:alpha(opacity=0);
 }
 .userInfoName {
 	top:14px;
