--- a/trunk/app/assets/stylesheets/qa_overwritting.css.scss.erb
+++ b/trunk/app/assets/stylesheets/qa_overwritting.css.scss.erb
@@ -5,3 +5,9 @@ span.error{
 body.we_are_inside_qa{
   background: url("<%=asset_path 'container_bg.png' %>") repeat-x scroll 0 50px #F4FAFD;
 }
+
+.__zm .changeUserHead{
+  left: 21px;
+  top: 179px;
+  width: 180px;
+}
