--- a/trunk/app/views/layouts/application.html.erb
+++ b/trunk/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
   <script src="/js/libs/modernizr-2.5.3.min.js"></script>
   <script type="text/javascript" charset="utf-8">
     window.psvr_subject = 'all';  
-  <% if false and user_signed_in? %>
+  <% if user_signed_in? %>
     window.loginUser = {
       "id": '<%= current_user.id %>',
       "uid": '<%= current_user.id %>',
@@ -267,6 +267,7 @@
   <div class="__zm">
     <div class="totop" id="backtotop" style="display: none;"><a href="javascript:void(0);">返回 </a></div>
     <div id="loginLayout"></div>
+    <div id="firstload" class="firstload" style="display:none;">加载中...</div>
   </div>
   <!-- JavaScript at the bottom for fast page loading -->
 
