--- a/trunk/app/views/application/headers/_zm_header.html.erb
+++ b/trunk/app/views/application/headers/_zm_header.html.erb
@@ -1,5 +1,5 @@
-<div class="__zm">
-<div id="header" style="position:static">
+<div class="__zm" style="">
+<div id="header" style="position:static;<%= yield :zm_header_style %>">
 
     <div class="headerContainer cf" id="zm_header">
 
@@ -34,7 +34,7 @@
       <li class="<%= 'current' if [surprise_path,
       videos_coursewares_path,
       books_coursewares_path,
-      ].include? request.path %>"><a class="navmark" href="<%= surprise_path %>">发现<span class="iconbg arrow"></span></a>
+      ].include? request.path %>"><a class="navmark" href="<%= surprise_path %>">专题<span class="iconbg arrow"></span></a>
       <div class="dropdown w100" style="display: none;">
       <span class="iconbg uparrow"></span>
       <a href="<%= videos_coursewares_path %>">课堂录像</a>
