--- a/trunk/app/views/topics/index.html.erb
+++ b/trunk/app/views/topics/index.html.erb
@@ -130,6 +130,10 @@ $('#categories_table > div').height($('#categories_table').height());
 </div>
 </div>
 <input id="removeIds" type="hidden" value="" />
+<div class="keyword" id="div_tags">
+<span class="labeltitle"><em class="iconbg label-ico"></em>您的位置：</span>
+<span><a href="javascript:;">全部领域</a></span>
+</div>
 </div><!--categories ends-->
 <div class="sheetshadow"></div><!--薄片阴影-->
 </div>
